redirect to new project documentation

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-
-<meta http-equiv="Refresh" content="0; url=intro.html" />
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="refresh" content="0; url=https://genome-sampler.readthedocs.io">
+    <title>Redirecting to genome-sampler documentation</title>
+</head>
+<body>
+    <p>If you are not redirected automatically, <a href="https://genome-sampler.readthedocs.io">click here</a>.</p>
+</body>
+</html>
